--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.11.4",
     "chart.js": "^4.4.3",
     "next": "^14.2.3",
     "pocketbase": "^0.21.2",
@@ -17,6 +18,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "rsync": "^0.6.1",
     "tailwind-merge": "^2.3.0"
   },
   "devDependencies": {
